<resources>
    <string name="app_name">RN Rental</string>
    <string name="app_name1">Rentify - Room Rent Management</string>
    <string name="text_sign_in_with_google">Sign In With Google</string>
    <string name="text_account_setting">Account Setting</string>
    <string name="text_display_name">"Rahul Raj"</string>
    <string name="text_email_label">"E-mail"</string>
    <string name="text_display_email">"rahulraj@gmail.com"</string>
    <string name="text_logout">Logout</string>
    <string name="text_app_version">v1.0.5</string>
    <string name="text_plus_add_property">+ Add Property</string>
    <string name="text_property_name_asterisk">Property Name *</string>
    <string name="text_property_name">Property Name</string>
    <string name="text_address_city_asterisk">Address/City *</string>
    <string name="text_address_city">Address/City *</string>
    <string name="text_default_rent">Default Rent Amount *</string>
    <string name="text_rent_amount">Enter Rent Amount</string>
    <string name="text_property_location">Property Location</string>
    <string name="text_0">0</string>
    <string name="text_total_shops">Total Shops *</string>
    <string name="text_total_rooms">Total Rooms *</string>
    <string name="text_electricity_unit_rate">Electricity Unit Rate *</string>

    <string name="text_rupee_symbol">₹</string>
    <string name="text_rent_2500">2,500</string>
    <string name="text_tenant_name">Tenant Name</string>
    <string name="text_status_paid">Paid</string>
    <string name="text_date_time">19 Aug 2025, 04:34PM</string>
    <string name="text_phone_number">+91 9649770970</string>
    <string name="text_edit_property">Edit Property</string>
    <string name="text_delete_property">Delete Property</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Main Activity Strings -->
    <string name="text_welcome">Welcome Back,</string>
    <string name="text_name">Rahul Kumar</string>
    <string name="text_occupancy">Total Occupancy</string>
    <string name="text_some_percentage">0%</string>
    <string name="text_view_amount">View Amount</string>
    <string name="text_properties">Properties</string>
    <string name="text_no_prop_found">No Properties Found</string>

    <string name="text_city">New Delhi</string>
    <string name="text_rooms">Rooms: </string>
    <string name="text_shops">Shops: </string>
    <string name="text_any_number">0</string>
    <string name="text_slash">/</string>

    <string name="text_image_desc">TODO</string>

    <!-- Login Screen Texts -->
    <string name="text_login_subheading">Manage your rooms and rent effortlessly</string>
    <string name="text_cc_in">+91</string>
    <string name="text_phone">Phone Number</string>
    <string name="text_number">+91 9876576543</string>
    <string name="text_otp_code">Enter OTP</string>
    <string name="text_req_otp">Request OTP</string>
    <string name="text_vrf_otp">Verify OTP</string>
    <string name="text_or">OR</string>
    <string name="text_sign_in_google">Sign In With Google</string>

    <string name="text_login_terms1">By continuing, you agree to our</string>
    <string name="text_login_terms2">Terms of Service</string>
    <string name="text_login_terms3">and</string>
    <string name="text_login_terms4">Privacy Policy.</string>

    <!-- Account Setting Strings -->
    <string name="text_name_fixed">Name</string>
    <string name="text_email_fixed">E-mail/Phone</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_update">Update</string>

    <!-- Add & Edit Property Screen Strings -->
    <string name="text_enter_p_details_fixed">Enter the details to get started.</string>
    <string name="text_update_p_details_fixed">Update your Property details below.</string>
    <string name="text_p_name_ast">Property Name *</string>
    <string name="text_p_address_ast">Address/City *</string>
    <string name="text_total_rooms_ast">Total Rooms *</string>
    <string name="text_total_shops_ast">Total Shops *</string>
    <string name="text_p_month_rent_ast">Monthly Rent *</string>
    <string name="text_location_fixed">Location</string>
    <string name="text_rent_amount_fixed">Rent Amount</string>
    <string name="text_elc_rate_ast">Electricity Unit Rate *</string>
    <string name="text_elc_unit_rate">₹ per unit</string>
    <string name="text_create_property">Create New Property</string>
    <string name="text_update_property">Update Property</string>

    <!-- Add & Edit Tenant Screen Strings -->
    <string name="text_add_tenant_detail_fixed">Enter Tenant details to get started.</string>
    <string name="text_edit_tenant_details_fixed">Update your Tenant details below.</string>
    <string name="text_add_tenant">Add Tenant</string>
    <string name="text_update_tenant">Update Tenant</string>

    <string name="text_t_name_ast">Tenant Name *</string>
    <string name="text_t_mobile_no">Mobile No. (Optional)</string>
    <string name="text_10_digit_no">Enter 10 Digit Number</string>

    <!-- Property & Room Details Screen Strings -->
    <string name="text_occ_vac_no">Occupied</string>
    <string name="text_vac_status">Vacant</string>
    <string name="text_tenant_start_fixed">Start:</string>
    <string name="text_rooms_shops_fixed">Rooms &amp; Shops</string>
    <string name="text_tenant_info_fixed">Tenant Information</string>
    <string name="text_na_fixed">N/A</string>
    <string name="text_tab_room_rents_fixed">Room Rents</string>
    <string name="text_tab_elc_bills_fixed">Electricity Bills</string>
    <string name="text_room_01">Room 01</string>
    <string name="text_clk_add_tenant">Click (Add Tenant)</string>
    <string name="text_units">Units:</string>




</resources>