<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".AccountSetting">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/acc_setting_profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_tenant_profile_default"
        app:civ_border_width="2dp"
        android:layout_marginTop="60dp"
        app:civ_border_color="#FF000000"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/acc_setting_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/text_account_setting"
        android:textColor="@color/text_black"
        android:background="?android:colorBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acc_setting_profile_image"/>

    <TextView
        android:id="@+id/text_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:text="@string/text_name_fixed"
        android:textColor="@color/text_sub_grey_600"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acc_setting_main_text"/>


    <ImageView
        android:id="@+id/imgNameEdit"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/ic_edit_name"
        android:layout_marginTop="26dp"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        android:contentDescription="@string/text_image_desc"
        app:layout_constraintStart_toEndOf="@id/text_name_label"
        app:layout_constraintTop_toBottomOf="@id/acc_setting_main_text"
        app:tint="@color/acc_setting_labels" />


    <TextView
        android:id="@+id/text_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/text_display_name"
        android:textColor="@color/text_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_name_label"/>

    <LinearLayout
        android:id="@+id/layoutEditName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/text_display_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- EditText -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUpdatedName"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/text_name_fixed"
            android:backgroundTint="@color/grey_700"
            android:paddingHorizontal="12dp"
            android:textSize="16sp"
            android:layout_marginEnd="8dp" />

        <!-- Cancel Button (Outlined) -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNameCancel"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/text_cancel"
            android:textColor="@color/grey_500"
            app:strokeColor="@color/teal_700"
            app:strokeWidth="2dp"
            android:textAllCaps="false"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="8dp"
            android:layout_marginEnd="8dp"/>

        <!-- Update Button (Filled) -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNameUpdate"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/text_update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            app:backgroundTint="?attr/colorPrimary"/>
    </LinearLayout>




    <TextView
        android:id="@+id/text_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:text="@string/text_email_fixed"
        android:textColor="@color/text_sub_grey_600"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutEditName"/>

    <TextView
        android:id="@+id/text_display_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/text_display_email"
        android:textColor="@color/text_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_email_label"/>

    <TextView
        android:id="@+id/text_sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/text_logout"
        android:textColor="@color/text_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/text_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textSize="14sp"
        android:text="@string/text_app_version"
        android:textColor="@color/text_sub_grey_600"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>